--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "connect-mongodb-session": "^3.1.1",
+    "csurf": "^1.11.0",
     "express": "^4.16.3",
     "express-session": "^1.17.3",
     "mongodb": "^5.3.0",
